--- a/myBlog-back/pom.xml
+++ b/myBlog-back/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
