--- a/myBlog-font/package.json
+++ b/myBlog-font/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "axios": "^0.20.0",
     "element-ui": "^2.13.2",
+    "mavon-editor": "^2.9.0",
+    "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-axios": "^3.0.1",
-    "vue-router": "^3.4.6"
+    "vue-router": "^3.4.6",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
