--- a/myBlog-font/package.json
+++ b/myBlog-font/package.json
@@ -18,6 +18,7 @@
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-axios": "^3.0.1",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.4.6",
     "vuex": "^3.5.1"
   },
